index.html edited

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,10 +5,9 @@
     <title>Chuck Norris Joke Generator</title>
 </head>
 <body>
-<table>
-<tr>
-<td th:text="${joke}"></td>
-</tr>
-</table>
+
+<h1>Chuck Norris Joke</h1>
+<p th:text="${joke}"></p>
+
 </body>
 </html>
